   - Display image and profile links for room members.
   - Fix chat room bookmark management.
 * Calls:
   - Make it possible to make calls to room members.
   - Display call information inside relevant chat window.
   - Move call data processing to a thread to avoid buffer underruns.
 * Shares:
   - Make it possible to select additional folders to share.
 * Transfers:
   - Make it possible to send files to room members.
   - Display transfer progress inside relevant chat window.
 * Menu:
   - Fix parsing of the menu refresh interval.
   - Add support for links to chat rooms.
 * Diagnostics:
   - Report which standards WiFi interfaces support.
 * Miscellaneous:
   - Add caching on vCards to reduce network traffic at connect.
   - Add support for double and tripple click selections in chat history.
   - Add a help panel for contacts.

wiLink 0.9.9a (2010-09-16)
 * Do not join bookmarked rooms until we receive our nickname.

wiLink 0.9.9 (2010-09-16)
 * Account management:
   - Add an explicit "Cancel" button to credentials prompt.
   - Test the credentials entered by the using in the account creation prompt.
   - Add links to "wiLink FAQ" from credentials and account prompts.
   - Make chat accounts accessible from the system tray.
 * Chat conversations:
   - Do not allow rich text in chat input box as it is discarded afterwards.
   - Do not display error messages in chat history.
   - Show conversation history up to 2 weeks.
 * File sharing:
   - Merge shares browse / search views.
   - Perform search on shares as the user types.
   - Support search requests with a base location.
 * Sofware updates:
   - Download updates in the background and prompt user after download.
   - Do not re-download a software update if it already has a valid checksum.
 * Miscellaneous:
   - Fix "open at login" option when multiple accounts are used.
   - Implement "open at login" option for freedesktop.org compliant desktops.
   - Make it possible to show / hide offline contacts.